# blog-posts

./: .vale.ini  README.md
rust-patterns-for-lifetime-management/: Cargo.toml  example_2.rs  example_4.rs  example_5.rs  rust-patterns-for-lifetime-management.md
rust-patterns-for-lifetime-management/examples/: Cargo.toml  example_1.rs  example_3.rs
